# ucb-api

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
app/: config.py  db.py  main.py  models.py
app/routes/: activities.py
htmlcov/: d_5f5a17c013354698___init___py.html  d_5f5a17c013354698_config_py.html  d_5f5a17c013354698_db_py.html  d_5f5a17c013354698_main_py.html  d_5f5a17c013354698_models_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_main_py.html  d_c6de83248c84ada5_activities_py.html  index.html  status.json
tests/: test_main.py
ucb-tester/ucb/: ucb.py
