[tool.poetry]
name = "ucb-api"
version = "0.1.0"
description = ""
authors = ["DemyCode <verycols@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.3"
fastapi = "^0.89.1"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
sqlmodel = "^0.0.8"
loguru = "^0.6.0"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = { version = "^23.1a1", allow-prereleases = true }
pre-commit = "^3.0.0"
pytest = "^7.2.1"
httpx = "^0.23.3"
mypy = "^0.991"
coverage = "^7.1.0"

[tool.black]
line-length = 120
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
